--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,22 @@
   font-size: 80% !important;
   color: #dc3545 !important;
 }
+.invalid-control {
+  border-color: #dc3545;
+  padding-right: calc(1.5em + 0.75rem);
+  /*background-image: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23dc354…%3e%3ccircle cy='3' r='.5'/%3e%3ccircle cx='3' cy='3' r='.5'/%3e%3c/svg%3E);*/
+  background-repeat: no-repeat;
+  background-position: center right calc(0.375em + 0.1875rem);
+  background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+}
+.valid-control {
+  border-color: #28a745;
+  padding-right: calc(1.5em + 0.75rem);
+  /*background-image: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8… 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e);*/
+  background-repeat: no-repeat;
+  background-position: center right calc(0.375em + 0.1875rem);
+  background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+}
 
 .addButton {
   /*border: 0px;*/
