--- a/src/app/Paginas/Body/backup/accounts/accounts.component.html
+++ b/src/app/Paginas/Body/backup/accounts/accounts.component.html
@@ -18,6 +18,9 @@
       </div>
       <form [formGroup]="account" (ngSubmit)="operacion()">
         <div class="modal-body">
+          <div class="row" style="width: 100%; display: block; margin-bottom: 20px;" *ngIf="isDelete()">
+            <h5 class="text-center" style="font-weight: 500;">¿ Esta seguro de eliminar la cuenta num: {{(indexAccountSelected + 1)}}, Id_account: {{account.value.id_account}} del Respaldo Id_backup: {{id_backup}}?</h5>
+          </div>
           <div class="form-group">
             <label for="name">Name: </label>
             <input type="text" class="form-control" id="name" formControlName="name" [ngClass]="(getError('name') == '') ? 'valid-control' : 'invalid-control'">
